--- a/OfflineDemo/OfflineDemo/Views/Home/Index.cshtml
+++ b/OfflineDemo/OfflineDemo/Views/Home/Index.cshtml
@@ -6,3 +6,15 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+<script>
+
+       if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+            navigator.serviceWorker.register('/sw.js', {
+            });
+
+        });
+    }
+
+</script>
